// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.std.go.core;

option go_package = "namespacelabs.dev/foundation/std/go/core";

message LivenessCheckArgs {}
message ReadinessCheckArgs {}
message DebugHandlerArgs {}
message ServerInfoArgs {}

message ServerInfo {
    string server_name = 1;
    string env_name    = 2;
    VCS    vcs         = 3;

    message VCS {
        string revision    = 1;
        string commit_time = 2;
        bool   uncommitted = 3;
    }
}